# djangology

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: backend.yml
djangology/: __init__.py  exceptions.py
djangology/selection/: __init__.py  exceptions.py  selection.py  types.py
djangology/selectors/: __init__.py  exceptions.py  selectors.py
djangology/services/: __init__.py  exceptions.py  services.py
tests/: conftest.py  factories.py  test_selection.py  test_services.py
tests/dummy/: models.py  settings.py
